@@ -225,13 +225,13 @@ dwarf::attr_value::to_string () const
 }
 
 // A few cases are trivial.
-#define SIMPLE(type, name, form)				\
-  type								\
-  dwarf::attr_value::name () const				\
-  {								\
-    type result;						\
-    xif (dwarf_form##form (thisattr (), &result) < 0);	\
-    return result;						\
+#define SIMPLE(type, name, form)					\
+  type									\
+  dwarf::attr_value::name () const					\
+  {									\
+    type result;							\
+    xif (thisattr (), dwarf_form##form (thisattr (), &result) < 0);	\
+    return result;							\
   }
 
 SIMPLE (bool, flag, flag)
@@ -246,7 +246,7 @@ const char *
 dwarf::attr_value::string () const
 {
   const char *result = dwarf_formstring (thisattr ());
-  xif (result == NULL);
+  xif (thisattr(), result == NULL);
   return result;
 }
 
@@ -286,7 +286,7 @@ dwarf::attr_value::constant_block () const
     case DW_FORM_block1:
     case DW_FORM_block2:
     case DW_FORM_block4:
-      xif (dwarf_formblock (thisattr (), &block) < 0);
+      xif (thisattr(), dwarf_formblock (thisattr (), &block) < 0);
       break;
 
     case DW_FORM_data1:
@@ -418,8 +418,8 @@ range_list_advance (int secndx,
 dwarf::range_list::const_iterator &
 dwarf::range_list::const_iterator::operator++ ()
 {
-  xif (range_list_advance (IDX_debug_ranges, _m_cu, _m_base,
-			   _m_begin, _m_end, _m_offset, NULL));
+  xif (_m_cu, range_list_advance (IDX_debug_ranges, _m_cu, _m_base,
+				  _m_begin, _m_end, _m_offset, NULL));
   return *this;
 }
 
@@ -523,7 +523,8 @@ dwarf::location_attr::const_iterator::operator++ ()
   else
     {
       // Advance to next list entry.
-      xif (range_list_advance (IDX_debug_loc, _m_attr._m_attr._m_attr.cu,
+      xif (_m_attr._m_attr.thisattr (),
+	   range_list_advance (IDX_debug_loc, _m_attr._m_attr._m_attr.cu,
 			       _m_base, _m_begin, _m_end, _m_offset,
 			       &_m_attr._m_attr._m_attr.valp));
       if (_m_offset > 1)
